--- a/index.html
+++ b/index.html
@@ -3,166 +3,110 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>نتائج السادس الإعدادي الدور الثالث - العراق</title>
+    <title>نتائج الانتظار</title>
     <style>
-        /* إعدادات الخطوط والألوان */
         body {
-            font-family: "Arial", sans-serif;
-            background-color: #f1f2f6;
+            font-family: Arial, sans-serif;
+            text-align: center;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-
-        .container {
-            background-color: #ffffff;
-            width: 100%;
-            max-width: 700px;
-            padding: 30px;
-            text-align: center;
-            border-radius: 10px;
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
-            margin: 20px;
-        }
-
-        /* تحسين العنوان */
-        h1 {
-            font-size: 36px;
-            color: #2a9df4;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-            font-weight: 700;
         }
 
         h2 {
-            font-size: 24px;
-            color: #444;
-            margin: 20px 0;
-            font-weight: bold;
+            margin-top: 20px;
+            font-size: 1.5em;
+            color: #333;
         }
 
-        .description {
-            font-size: 16px;
-            color: #555;
-            line-height: 1.5;
-            margin-bottom: 30px;
-        }
-
-        /* تنسيق الأزرار */
         .button-list {
             display: flex;
-            flex-direction: column;
-            gap: 20px;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 20px;
+            gap: 10px;
         }
 
         .button-list a {
+            display: inline-block;
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
             text-decoration: none;
-            color: #fff;
-            background-color: #444;
-            padding: 14px;
-            font-size: 18px;
-            border-radius: 8px;
-            font-weight: bold;
+            border-radius: 5px;
+            font-size: 1rem;
             text-align: center;
-            transition: background-color 0.3s, transform 0.3s;
+            transition: background-color 0.3s;
         }
 
         .button-list a:hover {
-            background-color: #f39c12;
-            color: #333;
-            transform: scale(1.05);
+            background-color: #45a049;
         }
 
-        /* زر الانضمام إلى القناة */
-        .channel-btn {
-            background-color: #1a73e8;
-            font-size: 20px;
-            padding: 16px;
-            font-weight: bold;
-            border-radius: 8px;
-            transition: background-color 0.3s, transform 0.3s;
-            color: white;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 30px;
-        }
-
-        .channel-btn:hover {
-            background-color: #4285f4;
-            transform: scale(1.05);
-        }
-
-        /* تنسيق مناسب للأجهزة الصغيرة */
+        /* تحسين التصميم للأجهزة الصغيرة */
         @media (max-width: 600px) {
-            h1 {
-                font-size: 28px;
+            .button-list a {
+                padding: 8px 16px;
+                font-size: 0.9rem;
             }
 
             h2 {
-                font-size: 20px;
-            }
-
-            .button-list a {
-                font-size: 16px;
-                padding: 12px;
-            }
-
-            .channel-btn {
-                font-size: 18px;
-                padding: 14px;
+                font-size: 1.2em;
             }
         }
 
+        .channel-btn {
+            display: inline-block;
+            background-color: #008CBA;
+            color: white;
+            padding: 12px 30px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.1rem;
+            margin-top: 20px;
+            transition: background-color 0.3s;
+        }
+
+        .channel-btn:hover {
+            background-color: #007B9E;
+        }
+
+        @media (max-width: 600px) {
+            .channel-btn {
+                padding: 10px 20px;
+                font-size: 1rem;
+            }
+        }
     </style>
 </head>
-
-
-
-   
-<br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br><br></br>
-<br></br>
-</body>
-</html>
 <body>
-    <div class="container">
-        <h1>نتائج السادس الإعدادي الدور الثالث - العراق</h1>
-        <p class="description">
-            مرحبًا بكم في صفحة نتائج السادس الإعدادي الدور الثالث لعام 2024. هنا يمكنك العثور على نتائج الامتحانات لجميع المحافظات العراقية. اختر المحافظة التي ترغب في الاطلاع على نتائجها.
-        </p>
-        
 
-        <h2>  “لا يوجد لدينا موعد محدد للإعلان عن النتائج حتى الآن، ولكننا في انتظار التحديثات في أقرب وقت”</h2>
-        <div class="button-list">
-            <a href="https://example.com/baghdad" target="_blank">بغداد</a>
-            <a href="https://example.com/basra" target="_blank">البصرة</a>
-            <a href="https://example.com/ninawa" target="_blank">نينوى</a>
-            <a href="https://example.com/karbala" target="_blank">كربلاء</a>
-            <a href="https://example.com/najaf" target="_blank">النجف</a>
-            <a href="https://example.com/wasit" target="_blank">واسط</a>
-            <a href="https://example.com/babel" target="_blank">بابل</a>
-            <a href="https://example.com/maissan" target="_blank">ميسان</a>
-            <a href="https://example.com/diyala" target="_blank">ديالى</a>
-            <a href="https://example.com/anbar" target="_blank">الأنبار</a>
-            <a href="https://example.com/theqar" target="_blank">ذي قار</a>
-            <a href="https://example.com/muthanna" target="_blank">المثنى</a>
-            <a href="https://example.com/salahaddin" target="_blank">صلاح الدين</a>
-            <a href="https://example.com/kirkuk" target="_blank">كركوك</a>
-            <a href="https://example.com/duhok" target="_blank">دهوك</a>
-            <a href="https://example.com/erbil" target="_blank">أربيل</a>
-            <a href="https://example.com/sulaymaniyah" target="_blank">السليمانية</a>
-        </div>
+    <h2> “لا يوجد لدينا موعد محدد للإعلان عن النتائج حتى الآن، ولكننا في انتظار التحديثات في أقرب وقت”</h2>
 
-        <!-- زر الانضمام للقناة -->
-        <a href="https://lraq2.github.io/-_-/" class="channel-btn" target="_blank">انضم إلى قناتنا على تلغرام</a>
+    <div class="button-list">
+        <a href="https://example.com/baghdad" target="_blank">بغداد</a>
+        <a href="https://example.com/basra" target="_blank">البصرة</a>
+        <a href="https://example.com/ninawa" target="_blank">نينوى</a>
+        <a href="https://example.com/karbala" target="_blank">كربلاء</a>
+        <a href="https://example.com/najaf" target="_blank">النجف</a>
+        <a href="https://example.com/wasit" target="_blank">واسط</a>
+        <a href="https://example.com/babel" target="_blank">بابل</a>
+        <a href="https://example.com/maissan" target="_blank">ميسان</a>
+        <a href="https://example.com/diyala" target="_blank">ديالى</a>
+        <a href="https://example.com/anbar" target="_blank">الأنبار</a>
+        <a href="https://example.com/theqar" target="_blank">ذي قار</a>
+        <a href="https://example.com/muthanna" target="_blank">المثنى</a>
+        <a href="https://example.com/salahaddin" target="_blank">صلاح الدين</a>
+        <a href="https://example.com/kirkuk" target="_blank">كركوك</a>
+        <a href="https://example.com/duhok" target="_blank">دهوك</a>
+        <a href="https://example.com/erbil" target="_blank">أربيل</a>
+        <a href="https://example.com/sulaymaniyah" target="_blank">السليمانية</a>
     </div>
+
+    <!-- زر الانضمام للقناة -->
+    <a href="https://lraq2.github.io/-_-/" class="channel-btn" target="_blank">انضم إلى قناتنا على تلغرام</a>
+
 </body>
 </html>
-
-
 
 
 
