--- a/index.html
+++ b/index.html
@@ -150,23 +150,23 @@
     <h2> “لا يوجد لدينا موعد محدد للإعلان عن النتائج حتى الآن، ولكننا في انتظار التحديثات في أقرب وقت”</h2>
 
     <div class="button-list">
-        <a href="https://example.com/baghdad" target="_blank">بغداد</a>
-        <a href="https://example.com/basra" target="_blank">البصرة</a>
-        <a href="https://example.com/ninawa" target="_blank">نينوى</a>
-        <a href="https://example.com/karbala" target="_blank">كربلاء</a>
-        <a href="https://example.com/najaf" target="_blank">النجف</a>
-        <a href="https://example.com/wasit" target="_blank">واسط</a>
-        <a href="https://example.com/babel" target="_blank">بابل</a>
-        <a href="https://example.com/maissan" target="_blank">ميسان</a>
-        <a href="https://example.com/diyala" target="_blank">ديالى</a>
-        <a href="https://example.com/anbar" target="_blank">الأنبار</a>
-        <a href="https://example.com/theqar" target="_blank">ذي قار</a>
-        <a href="https://example.com/muthanna" target="_blank">المثنى</a>
-        <a href="https://example.com/salahaddin" target="_blank">صلاح الدين</a>
-        <a href="https://example.com/kirkuk" target="_blank">كركوك</a>
-        <a href="https://example.com/duhok" target="_blank">دهوك</a>
-        <a href="https://example.com/erbil" target="_blank">أربيل</a>
-        <a href="https://example.com/sulaymaniyah" target="_blank">السليمانية</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">بغداد</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">البصرة</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">نينوى</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">كربلاء</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">النجف</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">واسط</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">بابل</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">ميسان</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">ديالى</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">الأنبار</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">ذي قار</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">المثنى</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">صلاح الدين</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">كركوك</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">دهوك</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">أربيل</a>
+        <a href="https://t.me/d_tt9/21968" target="_blank">السليمانية</a>
     </div>
 
     <!-- زر الانضمام للقناة -->
