--- a/index.html
+++ b/index.html
@@ -147,26 +147,25 @@
            
         </div>
            <h2>  نتائج السادس الإعدادي الدور الثالث - العراق </h2>
-    <h2> “لا يوجد لدينا موعد محدد للإعلان عن النتائج حتى الآن، ولكننا في انتظار التحديثات في أقرب وقت”</h2>
-
+    
     <div class="button-list">
-        <a href="https://t.me/d_tt9/21968" target="_blank">بغداد</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">البصرة</a>
+        <a href="https://t.me/d_tt9/21972" target="_blank">بغداد</a>
+        <a href="https://t.me/d_tt9/21970" target="_blank">البصرة</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">نينوى</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">كربلاء</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">النجف</a>
+        <a href="كربلاء المقدسة.rar" target="_blank">كربلاء</a>
+        <a href="https://t.me/d_tt9/21980" target="_blank">النجف</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">واسط</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">بابل</a>
+        <a href="https://t.me/d_tt9/21981" target="_blank">بابل</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">ميسان</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">ديالى</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">الأنبار</a>
+        <a href="https://t.me/d_tt9/21969" target="_blank">الأنبار</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">ذي قار</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">المثنى</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">صلاح الدين</a>
+        <a href="https://t.me/d_tt9/21979" target="_blank">المثنى</a>
+        <a href="https://t.me/d_tt9/21984" target="_blank">صلاح الدين</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">كركوك</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">دهوك</a>
+        <a href="https://t.me/d_tt9/21982" target="_blank">دهوك</a>
         <a href="https://t.me/d_tt9/21968" target="_blank">أربيل</a>
-        <a href="https://t.me/d_tt9/21968" target="_blank">السليمانية</a>
+        <a href="https://t.me/d_tt9/21975" target="_blank">السليمانية</a>
     </div>
 
     <!-- زر الانضمام للقناة -->
